--- a/WebTech/playground/index.html
+++ b/WebTech/playground/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Billing System</h1>
+
         <div class="add-item">
             <h2>Add Item</h2>
             <div class="input-group">
@@ -18,17 +19,46 @@
                 <button onclick="addItem()">Add</button>
             </div>
         </div>
+
         <div class="items">
-            <h2>Items</h2>  
-            <ul id="item-list"></ul>
+            <h2>Items</h2>
+            <table id="item-table">
+                <thead>
+                    <tr>
+                        <th>Item Name</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Total</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+            </table>
         </div>
+
         <div class="total">
             <button onclick="calculateTotal()">Calculate Total</button>
             <p id="total-price"></p>
         </div>
+
         <div class="invoice">
             <h2>Invoice</h2>
-            <ul id="invoice-list"></ul>
+            <table id="invoice-table">
+                <thead>
+                    <tr>
+                        <th>Item Name</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+            </table>
+            <p id="invoice-total"></p>
             <button onclick="generateInvoice()">Generate Invoice</button>
         </div>
     </div>
