--- a/WebTech/playground/index.html
+++ b/WebTech/playground/index.html
@@ -3,55 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Billing System</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Invoice Generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    
 </head>
 <body>
     <div class="container">
-        <h1>Advanced Billing System</h1>
+        <h1>Invoice Generator</h1>
         
         <div class="add-item">
-            <h2>Add Item</h2>
+            <h2>Add New Item</h2>
             <form id="add-item-form">
                 <div class="input-group">
-                    <input type="text" id="item-name" placeholder="Item name" required>
-                    <input type="number" id="item-price" placeholder="Item price" step="0.01" min="0" required>
-                    <input type="number" id="item-quantity" placeholder="Item quantity" min="1" required>
-                    <button type="submit">Add</button>
+                    <input type="text" id="item-name" placeholder="Item Name" required>
+                    <input type="number" id="item-price" placeholder="Price" step="0.01" min="0" required>
+                    <input type="number" id="item-quantity" placeholder="Quantity" min="1" required>
+                    <button type="submit">Add Item</button>
                 </div>
             </form>
         </div>
 
-        <div class="items">
+        <div class="items-list">
             <h2>Items List</h2>
-            <table id="item-table">
+            <table>
                 <thead>
                     <tr>
                         <th>Item Name</th>
-                        <th>Quantity</th>
                         <th>Price</th>
+                        <th>Quantity</th>
                         <th>Total</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="items-table">
+                    <!-- Items will be added here dynamically -->
+                </tbody>
             </table>
         </div>
 
         <div class="total">
             <h2>Total Amount</h2>
-            <p id="total-price">$0.00</p>
+            <div id="total-price">$0.00</div>
+            <button id="generate-invoice">Generate Invoice</button>
         </div>
 
-        <div class="invoice">
-            <h2>Invoice Generation</h2>
-            <div id="invoice-container"></div>
-            <button id="generate-invoice">Generate Invoice</button>
+        <!-- Customer Information Modal -->
+        <div id="customer-info-modal" class="modal">
+            <div class="modal-content">
+                <h2>Customer Information</h2>
+                <form id="customer-info-form">
+                    <div class="input-group">
+                        <input type="text" id="customer-name" placeholder="Customer Name" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="tel" id="customer-phone" placeholder="Phone Number" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-address" placeholder="Address" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-city" placeholder="City" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-state" placeholder="State" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-zip" placeholder="ZIP Code" required>
+                    </div>
+                    <button type="submit">Generate Invoice</button>
+                </form>
+            </div>
         </div>
     </div>
 
-    <script src="script.js" type="module"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
