--- a/WebTech/playground/index.html
+++ b/WebTech/playground/index.html
@@ -6,7 +6,9 @@
     <title>Invoice Generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
+    <!-- Your other head elements -->
 </head>
 <body>
     <div class="container">
@@ -61,6 +63,15 @@
                     </div>
                     <div class="input-group">
                         <input type="text" id="customer-address" placeholder="Address" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-city" placeholder="City" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-state" placeholder="State" required>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" id="customer-zip" placeholder="ZIP Code" required>
                     </div>
                     <button type="submit">Generate Invoice</button>
                 </form>
