--- a/WebTech/playground/invoice.html
+++ b/WebTech/playground/invoice.html
@@ -290,6 +290,7 @@ body[data-theme="dark"] select {
         max-width: 800px;
         margin: 20px auto;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        animation: myAnim 2s ease 0s 1 normal forwards;
     }
 
     #invoice-preview h1 {
@@ -396,6 +397,49 @@ body[data-theme="dark"] select {
         transform: translateX(0);
         opacity: 1;
     }
+}
+@keyframes myAnim {
+	0% {
+		animation-timing-function: ease-in;
+		opacity: 0;
+		transform: translateY(-250px);
+	}
+
+	38% {
+		animation-timing-function: ease-out;
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+	55% {
+		animation-timing-function: ease-in;
+		transform: translateY(-65px);
+	}
+
+	72% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	81% {
+		animation-timing-function: ease-in;
+		transform: translateY(-28px);
+	}
+
+	90% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	95% {
+		animation-timing-function: ease-in;
+		transform: translateY(-8px);
+	}
+
+	100% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
 }
     </style>
 </head>
